2006-09-22 [ticho]	1.89.0cvs5

	* configure.ac
		Update required sylpheed-claws version to 2.4.0.200.

2006-09-21 [colin]	1.89.0cvs4

	* src/vcal_meeting_gtk.c
		Workaround possible GTK crash: remove selection
		clipboard before destroying widget, or GTK+-2.10
		dies. Thanks to Hiro.

2006-09-11 [wwp]	1.89.0cvs3

	* config.h.in
		remove generated file.

2006-09-09 [colin]	1.89.0cvs2

	* src/vcal_manager.c
	* src/vcal_meeting_gtk.c
		From RFC 2445: TZID is UTC not GMT, and
		DT* shouldn't contain TZID parameter when
		it is UTC.

2006-09-09 [colin]	1.89.0cvs1

	* src/vcal_meeting_gtk.c
		GUI fixups - Add scrolledwindow for description,
		make stuff unsensitive when needed, wait cursor,
		and alignment.

2006-09-09 [colin]	1.89

	* Release 1.89

2006-09-09 [colin]	1.79.2cvs28

	* src/vcal_folder.c
	* src/vcal_meeting_gtk.c
	* src/vcal_meeting_gtk.h
	* src/vcalendar.c
		o Only save received meetings in my Meetings
		  if I accept them
		o Better availability check when planning
		  meetings
		o Warn if not available when receiving a meeting
		o Various fixes

2006-09-08 [colin]	1.79.2cvs27

	* src/vcal_meeting_gtk.c
		Avoid exporting empty IFB files - Outlook chokes
		on them. If we don't have any meeting, just 
		export a VFREEBUSY component with zero
		FREEBUSY properties.

2006-09-07 [colin]	1.79.2cvs26

	* src/vcal_meeting_gtk.c
		Fix segfault with empty free/busy

2006-09-07 [cleroy]	1.79.2cvs25

	* src/vcal_folder.c
		Trim URIs
	* src/vcal_meeting_gtk.c
		Fix availability searching

2006-09-07 [paul]	1.79.2cvs24

	* src/vcal_folder.c
		encoding for ical subs should be UTF-8
		Thanks to Colin

2006-09-07 [paul]	1.79.2cvs23

	* src/plugin.c
		some improvements to the English

2006-09-07 [colin]	1.79.2cvs22

	* src/plugin.c
		Update description

2006-09-07 [colin]	1.79.2cvs21

	* src/vcal_meeting_gtk.c
	* src/vcalendar.c
		Fix refresh
		Check our own availability
		Only check availability on new events

2006-09-06 [colin]	1.79.2cvs20

	* po/fr.po