@@ -40,3 +40,4 @@
 ( cvs diff -u -r -1.1.2.1 -r -1.1.2.2 config.h.in;  ) > 1.89.0cvs3.patchset
 ( cvs diff -u -r 1.1.2.42 -r 1.1.2.43 src/vcal_meeting_gtk.c;  ) > 1.89.0cvs4.patchset
 ( cvs diff -u -r 1.2.2.122 -r 1.2.2.123 configure.ac;  ) > 1.89.0cvs5.patchset
+( cvs diff -u -r 1.1.2.39 -r 1.1.2.40 src/vcal_manager.c;  ) > 1.89.0cvs6.patchset
