@@ -1,3 +1,8 @@
+2006-09-23 [colin]	1.89.0cvs6
+
+	* src/vcal_manager.c
+		Workaround a strange crash reported to me.
+
 2006-09-22 [ticho]	1.89.0cvs5
 
 	* configure.ac
